# YT-G-Sheets-Audio-DL-Worker

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/yt_gsheets_audio_worker/: __main__.py
